[package]
edition = "2021"
name = "spl-token-2022"
version = "3.0.3"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "Solana Program Library Token 2022"
readme = "../README.md"
license = "Apache-2.0"
repository = "https://github.com/solana-labs/solana-program-library"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
arrayref = "0.3.7"
base64 = { version = "0.22.0", optional = true }
bytemuck = { version = "1.15.0", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.2"
serde = { version = "1.0.197", optional = true }
serde_with = { version = "3.7.0", optional = true }
solana-program = "2.2.1"
solana-security-txt = "1.1.1"
solana-zk-sdk = "2.2.0"
spl-memo = { version = "4.0", features = ["no-entrypoint"] }
spl-pod = "0.2.2"
spl-token-group-interface = "0.2.3"
spl-token-metadata-interface = "0.3.3"
spl-transfer-hook-interface = "0.6.3"
spl-type-length-value = "0.4.3"
thiserror = "1.0"

[dev-dependencies]
lazy_static = "1.4.0"
proptest = "1.4"
serde_json = "1.0.115"
serial_test = "3.0.0"
solana-program-test = "2.2.1"
solana-sdk = "2.2.1"
spl-tlv-account-resolution = "0.6.3"

[features]
confidential-hook = []
default = ["confidential-hook", "token-group", "zk-ops"]
no-entrypoint = []
serde-traits = ["serde", "serde_with", "base64", "spl-pod/serde-traits"]
test-sbf = []
token-group = []
zk-ops = []
