[package]
edition = "2021"
name = "spl-token-2022"
version = "3.0.3"
authors = { workspace = true }
exclude = ["js/**"]
description = "Solana Program Library Token 2022"
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

[features]
no-entrypoint = []
test-sbf = []
zk-ops = []

[dependencies]
arrayref = "0.3.9"
bytemuck = { version = "1.18.0", features = ["derive"] }
num_enum = { version = "0.7.3", default-features = false }
solana-program = "2.3.0"
spl-discriminator = "0.4.1"
spl-memo = { version = "5.0.0", features = ["no-entrypoint"] }
spl-pod = "0.5.1"
spl-program-error = "0.5.0"
spl-token-group-interface = { version = "0.2.4" }
spl-token-metadata-interface = { version = "0.3.4" }
spl-transfer-hook-interface = { version = "0.6.4" }
spl-type-length-value = { git = "https://github.com/hamkj7hpo/spl-type-length-value.git", rev = "5328db539266002834f15d0ae8881a61d99d78e9" }
thiserror = "1.0.63"

[dev-dependencies]
solana-sdk = "2.3.6"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[patch.crates-io]
spl-discriminator = "0.4.1"
spl-type-length-value = { git = "https://github.com/hamkj7hpo/spl-type-length-value.git", rev = "5328db539266002834f15d0ae8881a61d99d78e9" }
spl-token-group-interface = { version = "0.2.4" }
spl-token-metadata-interface = { version = "0.3.4" }
spl-transfer-hook-interface = { version = "0.6.4" }
spl-tlv-account-resolution = { version = "=0.6.4" }
